Added due date functionality. Added duedate to the list view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="add_item">Add a new item...</string>
     <string name="editItemTextView">Edit Item Below:</string>
     <string name="save">Save</string>
+    <string name="duedateText">Due Date</string>
+    <string name="duedate">Enter due date here...</string>
 </resources>
